@@ -187,7 +187,7 @@ static const PixelPacket WhitePixel = {MaxRGB, MaxRGB, MaxRGB, OpaqueOpacity};
         fu_.c[0]=*p++;                          \
         value=fu_.f;                            \
       }                                         \
-    if (MAGICK_ISNAN(value))                \
+    if (MAGICK_ISNAN(value))                    \
       value = 0.0;                              \
   }
 #define ImportFloat64Quantum(endian,value,p)    \
